@@ -1,6 +1,7 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.faraday;
 
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ISystemObject;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 
 /**
@@ -43,5 +44,12 @@ public class FaradaySimSharing {
         // Menu items
         backgroundColorMenuItem,
         gridControlsMenuItem
+    }
+
+    public static enum SystemObjects implements ISystemObject {
+
+        // Secondary windows
+        backgroundColorDialog,
+        gridControlsDialog
     }
 }
